Version 1.1.2
-------------
Fixed: Doom Retro's PlaySound action was missing a parameter name, causing a crash when it was selected. Thanks to AnotherLife.
Fixed: rewrote sprite name, frame and rotation handling to better emulate Doom's behaviour. As a result, zero-rotation sprites can now replace sprites with multiple rotations. Thanks to VGA, AnotherLife.

Version 1.1.1
-------------
Added: A Doom Retro engine configuration. Thanks to VGA.
Added: Unknown Dehacked fields are now ignored, but also saved unaltered.
Fixed: missing parameter names for the PlaySound and PlayWeaponSound state actions.
Fixed: the sprite label property not updating after selecting a sprite in the state editor.
Fixed: a crash when jumping to a state with the RandomJump action.
Fixed: choosing a 30th sprite frame.
Fixed: state parameters disappearing when selecting a state.
Fixed: state action editing was possible in non-extended patches.
Fixed: patch states with extra text in their headers being ignored.
Fixed: calculation of maximum string length.

Version 1.1.0
-------------
Added: the ability to change the rotation in a sprite preview by dragging the mouse over it with the left button held down.
Added: a number of new state, thing, weapon and miscellaneous options for advanced ZDaemon\ZDoom support.
Added: better defined state action parameter support, including support for arguments.
Added: a new miscellaneous editor UI that supports an arbitrary number of options. Double click items to quickly edit them.
Added: clicking an active editor window toolbar button will bring it to the front if it is not already, otherwise it will close it.
Added: closing dialogs is now possible with the ESC and a window close button.
Added: a ZDaemon engine configuration file supporting some of ZDaemon's Dehacked extensions.
Fixed: sound numbering and sound assignment used sound 1 as the dummy sound erroneously.
Fixed: missing ampersands in thing flags.